# DocumentAuthenticator

./: .gitignore  README.md  Run DocAuth.bat  launcher.py
app/: .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
app/.streamlit/: config.toml
app/notebooks/: 01_signature_siamese.ipynb  02_copy_move_detection.ipynb  03_ela_analysis.ipynb  04_full_pipeline_demo.ipynb
app/src/analysis/: __init__.py  edge_detection.py  ela.py  ocr.py  wavelet.py
app/src/copy_move/: __init__.py  detector.py  visualizer.py
app/src/signature/: __init__.py  dataset.py  inference.py  model.py  train.py
app/tests/: test_analysis.py  test_copy_move.py  test_signature.py
